--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -63,13 +63,33 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
     }
 
   </style>
-
   <script>
 
+const secHand = document.querySelector('.second-hand')
+const minHand = document.querySelector('.min-hand')
+const hourHand = document.querySelector('.hour-hand')
 
+function setDate(){
+  current = new Date();
+  seconds = current.getSeconds();
+  secDegree = ((seconds / 60)* 360)+ 90;
+  secHand.style.transform = `rotate(${secDegree}deg)`
+
+  minutes = current.getMinutes();
+  minDegree = ((minutes / 60) * 360) + ((seconds/60)*6) + 90;
+  minHand.style.transform = `rotate(${minDegree}deg)`
+
+  hour = current.getHours();
+  hourDegree = ((hour / 12) * 360) + ((minutes/60)*30) + 90;
+  hourHand.style.transform = `rotate(${hourDegree}deg)`
+}
+  setInterval(setDate, 1000);
   </script>
 </body>
 </html>
