--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -13,7 +13,7 @@
     <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+    <input id="blur" type="range" name="blur" min="0" max="25" value="25" data-sizing="px">
 
     <label for="base">Base Color</label>
     <input id="base" type="color" name="base" value="#ffc600">
@@ -84,6 +84,14 @@
         document.documentElement.style.setProperty(`--base`, '#ffc600');
         document.documentElement.style.setProperty(`--blur`, '25px');
         document.documentElement.style.setProperty(`--spacing`, '10px');
+
+        // input.forEach(inputs => function(){
+        //   if(inputs.name == '')
+        // })
+
+        input.item(0).value =10;
+        input.item(1).value =25;
+        input.item(2).value = `#ffc600`;
       }
 
 
