--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -27,6 +27,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -44,6 +45,12 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -57,6 +64,23 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      flex: 1 0 auto;
+    }
+
+    .panel > *:first-child{
+      transform:translateY(-100%);
+    }
+
+    .panel > *:last-child{
+      transform:translateY(100%);
+    }
+
+    .panel.open-active > *:first-child{
+      transform:translateY(0%);
+    }
+
+    .panel.open-active > *:last-child{
+      transform:translateY(0%);
     }
 
     .panel p {
@@ -72,6 +96,7 @@
 
     .panel.open {
       font-size: 40px;
+      flex:5;
     }
 
   </style>
@@ -107,6 +132,19 @@
 
   <script>
 
+function transition(){
+  this.classList.toggle('open');
+    }
+
+    function translate(e){
+      if(e.propertyName.includes('flex'))
+      {
+        this.classList.toggle('open-active')
+      }
+    }
+    const panel = document.querySelectorAll('.panel');
+    panel.forEach(element => element.addEventListener('click', transition))
+    panel.forEach(element => element.addEventListener('transitionend', translate))
   </script>
 
 
