--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -29,13 +29,30 @@
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
 
+    console.log(people.some(element=> {
+      const date = new Date();
+      return (date.getFullYear() - element.year >=19)
+    }))
+
+    console.log(people.every(element=> {
+      const date = new Date();
+      return (date.getFullYear() - element.year >=19)
+    }))
+
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    console.log(comments.find(element => element.id === 823423))
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+
+    const index = comments.findIndex(element => element.id === 823423)
+    comments.splice(index, 1)
+    console.log(comments)
 
   </script>
 </body>
