--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -8,6 +8,54 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+  const canvas = document.querySelector('#draw');
+  const ctx = canvas.getContext('2d');
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+  let hue =0;
+  let swap = false;
+  let width= 700;
+  ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+  ctx.lineJoin = 'round'
+  ctx.lineCap = 'round';
+  ctx.lineWidth = width;
+
+
+
+ let isDraw = false;
+ let lastX =0;
+ let lastY =0;
+function draw(e){
+  if(isDraw){
+    console.log(e);
+    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+    ctx.lineWidth = width;
+    ctx.beginPath();
+    ctx.moveTo(lastX, lastY);
+    ctx.lineTo(e.offsetX, e.offsetY);
+    ctx.stroke();
+    [lastX, lastY] = [e.offsetX, e.offsetY];
+    hue++;
+    if(hue >= 500){
+      hue =0;
+    }
+    if(swap)
+    {
+      width++;
+    }
+    else{
+      width--;
+    }
+    if(width== 700 || width ==0){
+      swap = !swap;
+    }
+  }
+}
+
+  canvas.addEventListener('mousemove', draw);
+  canvas.addEventListener('mousedown', (e)=> {isDraw = true;
+    [lastX, lastY] = [e.offsetX, e.offsetY];})
+  canvas.addEventListener('mouseup', ()=> isDraw = false)
 </script>
 
 <style>
